# fw-reference

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
build-arm/: .ninja_deps  .ninja_log  build.ninja  firmware.elf
cmake/: arm-toolchain.cmake
docs/: architecture.md  design_decisions.md
docs/captures/: README.md  Session 111.sal  can_two_node_success.sal  rs485_hil_protocol.sal  rs485_hil_protocol_decoded.csv  spi_mcp2515_init.csv  spi_mcp2515_init2.csv  spi_mcp2515_init3.csv  spi_mcp2515_init4.csv
include/hal/: hal_gpio.hpp  hal_i2c.hpp  hal_rs485.hpp  hal_spi.hpp  hal_timer.hpp  hal_uart.hpp
include/util/: circular_buffer.hpp  cobs.hpp  crc16.hpp
lib/: CMakeLists.txt  FreeRTOSConfig.h  clock_config.cpp  lpc1768.ld  startup.cpp
rp2040/: CMakeLists.txt  bitbang_spi_rp2040.cpp  bitbang_spi_rp2040.hpp  can_loopback_test.cpp  can_node.cpp  echo_responder.cpp  protocol_responder.cpp  spi_rp2040.cpp  spi_rp2040.hpp  ws2812.pio
src/app/: main_blinky.cpp
src/drivers/: bmp280.hpp  mcp2515.cpp  mcp2515.hpp  rs485_protocol.cpp  rs485_protocol.hpp  telemetry_protocol.cpp  telemetry_protocol.hpp
src/hal/lpc1768/: bitbang_i2c_lpc1768.cpp  bitbang_i2c_lpc1768.hpp  bitbang_spi_lpc1768.cpp  bitbang_spi_lpc1768.hpp  rs485_lpc1768.cpp  rs485_lpc1768.hpp  spi_lpc1768.cpp  spi_lpc1768.hpp
src/hal/mock/: hal_gpio_mock.hpp  hal_rs485_mock.hpp  hal_spi_mock.hpp  hal_timer_mock.hpp  hal_uart_mock.hpp
src/util/: cobs.cpp
tests/: CMakeLists.txt  blinky_minimal.cpp  i2c_probe_test.cpp  mcp2515_bus_test.cpp  mcp2515_loopback_test.cpp  mcp2515_probe_test.cpp  port2_test.cpp  rs485_test.cpp  sck_toggle_test.cpp  sck_watchdog_test.cpp  spi_debug_test.cpp  test_cobs.cpp  test_crc16.cpp  test_mcp2515.cpp  test_rs485_protocol.cpp  test_telemetry_protocol.cpp
tools/: bmp280_stub.py  crc_validator.py  serial_hexterm.py
